# apriorics

./: .gitignore  .gitmodules  README.md  config_kartezio.py  dvc_config  file_list.txt  ihc_mapping.json  ihc_mask_registration.py  kartezio_data_pipeline.py  kartezio_inference.ipynb  kartezio_training.py  kartezio_visualization.ipynb  main.py  pyproject.toml  requirements.txt  settings.ini  splits.csv
.dvc/: config
apriorics/: data.py  dataset_preparation.py  masks.py  models.py  polygons.py  registration.py  stain_augment.py  transforms.py
docs/understanding/: schemas.md  tissue_masking.md
dvc/: mask_extraction.yaml  train.yaml
dvc/AE1AE3/mask_extraction/: params.yaml  run.sh
dvc/AE1AE3/train/: params.yaml
dvc/CD3CD20/mask_extraction/: params.yaml
dvc/CD3CD20/train/: params.yaml
dvc/ColIV/mask_extraction/: dvc.yaml  params.yaml
dvc/ColIV/train/: dvc.yaml
dvc/ERGPodoplanine/mask_extraction/: params.yaml
dvc/ERGPodoplanine/train/: params.yaml
dvc/P40ColIV/.dvc/: config
dvc/P40ColIV/mask_extraction/: params.yaml
dvc/P40ColIV/train/: params.yaml
dvc/PHH3/mask_extraction/: params.yaml
dvc/PHH3/train/: params.yaml
dvc/mask_extraction/: dvc.yaml.base
dvc/mask_extraction/CD3CD20/: params.yaml
dvc/train/: dvc.yaml.base
dvc/train/AE1AE3/: params.yaml
dvc/train/CD3CD20/: .fp_fn_done.yaml  dvc.yaml  params.yaml
dvc/train/ERGPodoplanine/: params.yaml
dvc/train/P40ColIV/: params.yaml
dvc/train/PHH3/: params.yaml
file_lists/: AE1AE3  CD3CD20  ERGPodoplanine  P40ColIV  P40ColIV.bkp
marimo_notebooks/: correct_masks_adipose.py  correct_masks_ink.py  get_masks_adipose.py  ink_deletion.py  test_adipocyte_segmentation.py  test_red_extract.py  test_valis.py
scripts/mask_extraction/: .P40ColIV  .cd3cd20  params.yaml  recompute_wkt.py  register_extract_polygons_masks_mp.py  run.sh
scripts/train/: generate_patch_dataset.py  get_fp_fn_geojsons.py  metrics_config.py  params.yaml  predict_export_geojsons.py  predict_folder.py  train_detection.py  train_segmentation.py  transforms_config.py
scripts/utils/: file_transfer.py  hovernet_json2geojson.py  transfer_gpkg.sh  transfer_slides.sh  update_file_list.py
src/apriorics/: __init__.py  data.py  data_utils.py  dataset_preparation.py  losses.py  masks.py  metrics.py  models.py  plmodules.py  polygons.py  registration.py  transforms.py
