[project]
name = "apriorics"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy (>=1.22,<2.0)",
    "torch (>=1.10.1,<2.0.0)",
    "torchvision (>=0.11,<0.15)",
    "pytorch-lightning (>=1.5.7,<2.0.0)",
    "torchmetrics (>=0.7.2,<0.8.0)",
    "opencv-python-headless (>=4.5.5.62,<4.6.0.0)",
    "timm (>=0.5.4,<0.6.0)",
    "tqdm (>=4.62,<5.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "fastcore (>=1.3,<2.0)",
    "matplotlib (>=3.5,<4.0)",
    "scikit-image (>=0.19,<0.20)",
    "pillow (>=9.0,<10.0)",
    "albumentations (>=1.1,<1.2)",
    "scipy (>=1.8,<2.0)",
    "comet-ml (>=3.26,<4.0)",
    "nptyping (>=2.0.0,<3.0.0)",
    "pathaia (==0.2.6)",
    "shapely (>=2.0.4,<3.0.0)",
    "rasterio (>=1.2.10,<2.0.0)",
    "cucim-cu12 (>=24.8.0,<25.0.0)",
    "docker (>=5.0.3,<6.0.0)",
    "geopandas (>=0.14.4)",
    "dvc (>=3.59.1,<4.0.0)",
    "itk (>=5.4.3,<6.0.0)",
    "requests (==2.31.0)",
    "urllib3 (==1.26.8)",
    "cupy-cuda12x (>=13.4.1,<14.0.0)",
    "opencv-contrib-python (>=4.5.5.62,<4.6.0.0)",
    "pyogrio~=0.9.0",
    "pyarrow~=17.0.0",
    "openslide-python>=1.1.2",
]
dynamic = ["version"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu117", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
