[project]
name = "apriorics"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy (>=2.0.0,<3.0)",
    "torch (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23,<0.24)",
    "pytorch-lightning (>=2.5.0,<3.0.0)",
    "torchmetrics (>=0.8.2,<0.9.0)",
    "opencv-python-headless (>=4.12.0.88,<4.13.0.0)",
    "timm (>=1.0.19,<1.1.0)",
    "tqdm (>=4.67.1,<5.0)",
    "pandas (>=2.2.2,<3.0.0)",
    "fastcore (>=1.3,<2.0)",
    "matplotlib (>=3.5,<4.0)",
    "scikit-image (>=0.25.2,<0.26)",
    "pillow (>=11.0,<12.0)",
    "albumentationsx (>=2.0.0,<3.0)",
    "scipy (>=1.8,<2.0)",
    "comet-ml (>=3.26,<4.0)",
    "pathaia",
    "shapely (>=2.1.1,<3.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "cucim-cu12 (>=25.8.0,<26.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "geopandas (>=1.1.1,<1.2.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "itk (>=5.4.3,<6.0.0)",
    "requests (==2.31.0)",
    "urllib3 (==1.26.8)",
    "cupy-cuda12x (>=13.4.1,<14.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<4.13.0.0)",
    "pyogrio~=0.9.0",
    "pyarrow~=17.0.0",
    "openslide-python>=1.4.2",
    "openslide-bin>=4.0.0",
    "fiona (>=1.10.0,<2.0.0)"
]
dynamic = ["version"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
]
torchvision = [
  { index = "pytorch-cu126"},
]
pathaia = {path = "submodules/PathAIA"}

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["setuptools<81", "setuptools-scm"]
build-backend = "setuptools.build_meta"
